--- a/style.css
+++ b/style.css
@@ -111,9 +111,9 @@ h1{
     margin-bottom: 10px;
   }
   .but{
-    display: block;
+    display: flex;
+    justify-content:center;
     margin-top: 100px;
-    margin:auto;
   }
   .pot{
     visibility: hidden;
